--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-.fullscreen {
-  height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -15,14 +14,12 @@
 .row {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
 }
 
 .images {
-  width: 200px;
-  height: 200px;
-  margin: 10px;
+  width: 300px;
+  height: 300px;
+  margin: 5px;
 }
 
 .images img {
@@ -47,33 +44,32 @@ h1 {
     display: flex;
     justify-content: center;
     margin: 10;
-
     width: 100%;
-    background-color: white; /* Background color can be anything */
+    font-size: smaller;
   }
   .images {
-    width: 50px;
-    height: 20px;
-    margin: 1px;
+    width: 100px;
+    height: 50%;
   }
-    /* Add iPhone-specific styles here */
-    .row {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
-    }
-    .images img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
+  /* Add iPhone-specific styles here */
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
   }
+  .images img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
 
 
 @media only screen and (min-width: 481px) and (max-width: 1024px) {
   /* Styles for tablet */
   .images {
-    /* Add tablet-specific styles here */
+    width: 200px;
+    height: 200px;
   }
 }
